--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Git and Github</h1>
     <p>Git is not the same as GitHub.</p>
     <p>Git is a version control system.</p>
+    <p>Git helps you keep track of code changes.</p>
   </body>
 </html>
