--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <h1>Git and Github</h1>
     <p>Git is a version control system.</p>
+    <p>Over 70% of developers use Git!</p>
   </body>
 </html>
