--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <p>Git is a version control system.</p>
     <p>Over 70% of developers use Git!</p>
     <p>Git helps you keep track of code changes.</p>
+    <p>This is my first paragraph on test-branch-2.</p>
   </body>
 </html>
