added a new paragraph to main

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <p>Over 70% of developers use Git!</p>
     <p>Git helps you keep track of code changes.</p>
     <p>This is my first paragraph on test-branch-2.</p>
+    <p>Git is used to collaborate on code.</p>
   </body>
 </html>
