--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Git and Github</h1>
+    <p>You can download Git for free from the following website: https://www.git-scm.com/</p>
     <p>Git is not the same as GitHub.</p>
     <p>Git is a version control system.</p>
     <p>Over 70% of developers use Git!</p>
